--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             <h2 class="gradient-text">Projetos</h2>
             <div class="projects-grid">
                 <div class="project-card card" onclick="openProject('fastHealth', this.getBoundingClientRect())">
-                    <img src="assets/FastHealth3.png" alt="FastHealth Preview" class="project-image">
+                    <img src="assets/fasthealth3.png" alt="FastHealth Preview" class="project-image">
                     <div class="project-info">
                         <h3>FastHealth</h3>
                         <p>Consulta sobre sintomas e um encaminhamento à um médico especialista.</p>
